--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -2917,7 +2917,7 @@ main .breadcrumbs {
     padding: 0;
 }
 .test-block{
-    background: url(http://kapdep.loc/front/director-back.png) no-repeat bottom;
+    background: url(http://kapdepo.cv05345.tmweb.ru/front/director-back.png) no-repeat bottom;
     background-size: cover;
     position: absolute;
     top: 0;
