--- a/public/css/tim/market-data.css
+++ b/public/css/tim/market-data.css
@@ -1,3 +1,6 @@
+body {
+    font-family: "CenturyGothic"!important;
+}
 .market-nav {
     padding: 0 20px;
 }
@@ -281,7 +284,9 @@
 .report-table tbody tr:nth-child(even) {
     background-color: #f5f5f7 !important;
 }
-
+.finance-indicators-chart .highcharts-stocktools-wrapper {
+    display: none!important;
+}
 .report-table tbody tr td:first-child {
     font-weight: bold !important;
 }
